--- a/SpringDataJDBCOracle/pom.xml
+++ b/SpringDataJDBCOracle/pom.xml
@@ -36,6 +36,13 @@
     <version>2.2.2.RELEASE</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.17</version>
+</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
