--- a/SpringDataJDBCOracle/src/main/resources/application.properties
+++ b/SpringDataJDBCOracle/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Set true for first time db initialization.
 spring.datasource.initialize=true
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=system
-spring.datasource.password=password
-spring.datasource.driver-class-name=oraclejdbc.driver.OracleDriver
+spring.datasource.url=jdbc:mysql://localhost:3306/JDBCtemplate
+spring.datasource.username=root
+spring.datasource.password=system
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
