--- a/SpringHibernate/.classpath
+++ b/SpringHibernate/.classpath
@@ -42,5 +42,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/vishal.singh/Downloads/ojdbc14.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
